# django-split-tests

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  data.json  pyproject.toml  requirements.txt  settings.py
.github/workflows/: coverage.yaml  pytest.yaml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_e0892cfe9f1fd5b4_0001_initial_py.html  z_ecbfcb05cb6bbf98_admin_py.html  z_ecbfcb05cb6bbf98_apps_py.html  z_ecbfcb05cb6bbf98_cache_py.html  z_ecbfcb05cb6bbf98_config_py.html  z_ecbfcb05cb6bbf98_help_text_py.html  z_ecbfcb05cb6bbf98_managers_py.html  z_ecbfcb05cb6bbf98_middleware_py.html  z_ecbfcb05cb6bbf98_models_py.html
split_tests/: admin.py  apps.py  cache.py  config.py  help_text.py  managers.py  middleware.py  models.py
split_tests/migrations/: 0001_initial.py
tests/: conftest.py  test_config.py  test_managers.py  test_middleware.py  test_models.py
