[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "django-split-tests"
version = "0.1.0-dev"
description = "A Django app for managing split (A/B) tests."
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  {name = "Adam J. Forster", email = "hello@adamjforster.co"},
]
dependencies = ["Django>=6.0"]


[tool.coverage.run]
branch = true
relative_files = true


[tool.hatch.build]
include = ["split_tests"]


[tool.isort]
combine_as_imports = true
line_length = 100
lines_after_imports = 2
lines_between_types = 1
multi_line_output = 9
profile = "black"
skip_gitignore = true
src_paths = ["split_tests", "tests"]


[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "settings"
addopts = "--cov=split_tests"
log_cli = true
# To debug test failures, switch WARN to DEBUG below.
log_cli_level = "WARN"
#log_cli_level = "DEBUG"
pythonpath = "."
python_files = [
    "tests.py",
    "test_*.py",
    "*_tests.py",
]


[tool.ruff]
line-length = 100
